add requirements and pipenv files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - seccomp:unconfined
     ports:
       - 5000:5000
+    command: python3 app.py
     volumes:
       - ./:/app
     networks:
